Update the README with building and running information.